corrected spacing, margins to % and rem

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
+* {
+    box-sizing: border-box;}
 body {
-    box-sizing: border-box;
     font-family: sans-serif;
     color: #3A3A3A;
     margin: 0;
@@ -21,7 +22,7 @@ body {
     color: white;
     text-align: left;
     vertical-align: middle;
-    margin-left: 14rem;
+    margin-left: 15%;
     top: 10%;
     
 
@@ -43,7 +44,7 @@ body {
     top: 316px;
     width: 100%;
     background: lightgrey;
-    text-indent: 12rem;
+    text-indent: 13%;
     padding: .8rem 0;
 
 }
@@ -74,9 +75,8 @@ body {
 
 
 main {
-    display: flex;
-    justify-content: space-between;
     margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 h3 {
     font-size: 1.3rem;
@@ -96,7 +96,7 @@ p {
 
 .left-side {
     width: 65%;
-    margin: 0 3rem 0 14rem;
+    margin: 0 3% 0 15%;
 }
 .quote {
     color: #2C9AB7;
@@ -118,7 +118,7 @@ p {
 
 .right-side {
     width: 30%;
-    margin: 0 14rem 0 3rem;
+    margin: 0 15% 0 3%;
 }
 .right-side img {
     width: 100%;
@@ -198,33 +198,33 @@ footer a {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 5%;
     padding: 0;
+    margin: 2%;
     
 }
 .kitty-profile-box {
     width: 25%;
-    height: 650px;
+    height: 43rem;
     list-style-type: none;
     position: relative;
     text-align: center;
+    margin-bottom: 5%;
 }
 .kitty-profile-box img {
-    width: 300px;
-    height: 300px;
+    width: 12rem;
+    height: 12rem;
     object-fit: cover;
-    border-radius: 10%;
-    padding: 1rem;
+    border-radius: 2rem;
+    padding: 2%;
 }
 .desc p {
     color: black;
     text-align: left;
+    margin-bottom: 1rem;
 }
 
 .desc a {
-    position:absolute;
     text-decoration: none;
     color:#2C9AB7;
-    bottom: 0;
-    left: 0;
 }
